@@ -7,7 +7,8 @@
    list API response)
  - Added installed_plugins table
  - Added a new API: install plugin 
-
+ - Handled redundant plugin installation
+ 
 
 # version 0.67.1
 
